globus-gssapi-gsi (11.3-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 11 Feb 2014 10:02:36 -0500

globus-gssapi-gsi (11.2-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Mon, 10 Feb 2014 18:36:57 -0500

globus-gssapi-gsi (11.1-1+gt6.@distro@) @distro@; urgency=low

  * Update dependencies

 -- Globus Toolkit <support@globus.org>  Tue, 28 Jan 2014 18:34:27 -0500

globus-gssapi-gsi (11.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jan 2014 11:17:21 -0500

globus-gssapi-gsi (10.12-1) unstable; urgency=low

  * Enable adding in memory CA cert to cert store

 -- Globus Toolkit <support@globus.org>  Thu, 12 Dec 2013 17:28:31 -0600

globus-gssapi-gsi (10.11-1) unstable; urgency=low

  * GT-489: xio_gsi errors with OpenSSL 1.0.1e

 -- Globus Toolkit <support@globus.org>  Fri, 06 Dec 2013 12:54:48 -0500

globus-gssapi-gsi (10.10-1) unstable; urgency=low

  * GT-445: Doxygen fixes

 -- Globus Toolkit <support@globus.org>  Thu, 10 Oct 2013 13:27:38 -0400

globus-gssapi-gsi (10.9-1) unstable; urgency=low

  * GT-454: memory leak in gss_accept_sec_context

 -- Globus Toolkit <support@globus.org>  Thu, 10 Oct 2013 11:21:29 -0400

globus-gssapi-gsi (10.8-1) unstable; urgency=low

  * GT-363: gss_get_mic/gss_verify_mic fail for some TLS ciphers with OpenSSL 1.0.1

 -- Globus Toolkit <support@globus.org>  Fri, 22 Feb 2013 11:06:19 -0500

globus-gssapi-gsi (10.7-2) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-gssapi-gsi (10.7-1) unstable; urgency=low

  * RIC-265: Memory leak in gss_accept_delegation()

 -- Globus Toolkit <support@globus.org>  Mon, 07 May 2012 14:29:36 -0400

globus-gssapi-gsi (10.6-1) unstable; urgency=low

  * RIC-254: gssapi probe for whether it can use openssl internals doesn't always work
