@@ -1,3 +1,9 @@
+globus-gssapi-gsi (11.4-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Tue, 11 Feb 2014 10:19:20 -0500
+
 globus-gssapi-gsi (11.3-1+gt6.@distro@) @distro@; urgency=low
 
   * Test fixes
